objects/Cart__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Address</label>
        <referenceTo>Address_Book__c</referenceTo>
        <relationshipLabel>Cart</relationshipLabel>
        <relationshipName>Cart</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cart_Id__c</fullName>
        <label>Cart Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cart_Status__c</fullName>
        <label>Cart Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coupon_Applied__c</fullName>
        <formula>NOT(ISBLANK(Coupon__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coupon Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coupon_Discount__c</fullName>
        <formula>Coupon__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coupon Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Coupon__c</fullName>
        <label>Coupon</label>
        <referenceTo>Coupon__c</referenceTo>
        <relationshipLabel>Cart</relationshipLabel>
        <relationshipName>Cart</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Address</label>
        <referenceTo>Address_Book__c</referenceTo>
        <relationshipLabel>Cart (Shipping Address)</relationshipLabel>
        <relationshipName>Cart1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>Cart_Items__c.Item_Amount__c</summarizedField>
        <summaryForeignKey>Cart_Items__c.Cart__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cart</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cart</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CART - {0000}</displayFormat>
        <label>Cart Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cart</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>